@@ -51,7 +51,6 @@
 #include <sys/types.h>
 #include <slurm/slurm.h>
 
-#include "src/api/job_info.h"
 #include "src/common/hostlist.h"
 #include "src/common/node_select.h"
 #include "src/plugins/select/bluegene/plugin/bg_boot_time.h"
