@@ -72,7 +72,6 @@ extern int   spank_unset_job_env(const char *name);
 #include "src/salloc/opt.h"
 
 #ifdef HAVE_BG
-#include "src/api/job_info.h"
 #include "src/common/node_select.h"
 #include "src/plugins/select/bluegene/plugin/bg_boot_time.h"
 #include "src/plugins/select/bluegene/wrap_rm_api.h"
